ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
     kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: host1.domain.ext
    http:
      paths:
      - pathType: Prefix
        path: "/nginx/"
        backend:
          service:
            name: hello-world
            port:
              number: 80
      - pathType: Prefix
        path: "/httpd/"
        backend:
          service:
            name: hello-httpd
            port:
              number: 80
